@@ -49,13 +49,13 @@ install: bluelog livelog
 	mkdir -p $(DESTDIR)/usr/bin/
 	mkdir -p $(DESTDIR)/usr/share/doc/$(APPNAME)-$(VERSION)/
 	mkdir -p $(DESTDIR)/usr/share/man/man1
-	mkdir -p $(DESTDIR)/var/lib/$(APPNAME)/
+	mkdir -p $(DESTDIR)/usr/share/$(APPNAME)/
 	cp $(APPNAME) $(DESTDIR)/usr/bin/
 	cp -a $(DOCS) $(DESTDIR)/usr/share/doc/$(APPNAME)-$(VERSION)/
 	gzip -c $(APPNAME).1 >> $(APPNAME).1.gz
 	cp $(APPNAME).1.gz $(DESTDIR)/usr/share/man/man1/
-	cp -a --no-preserve=ownership www/* $(DESTDIR)/var/lib/$(APPNAME)/
-	cd $(DESTDIR)/var/lib/$(APPNAME)/ ; ln -sf $(DEFAULT_CSS) style.css
+	cp -a --no-preserve=ownership www/* $(DESTDIR)/usr/share/$(APPNAME)/
+	cd $(DESTDIR)/usr/share/$(APPNAME)/ ; ln -sf $(DEFAULT_CSS) style.css
 
 # Build for Pwn Plug
 pwnplug:
@@ -79,12 +79,13 @@ upgrade: removeold install
 uninstall:
 	rm -rf $(DESTDIR)/usr/share/doc/$(APPNAME)-$(VERSION)/
 	rm -f $(DESTDIR)/usr/share/man/man1/$(APPNAME).1.gz
-	rm -rf $(DESTDIR)/var/lib/$(APPNAME)/
+	rm -rf $(DESTDIR)/usr/share/$(APPNAME)/
 	rm -f $(DESTDIR)/usr/bin/$(APPNAME)
 
 # Remove older versions
 removeold:
 	rm -rf $(DESTDIR)/usr/share/doc/$(APPNAME)*
 	rm -f $(DESTDIR)/usr/share/man/man1/$(APPNAME).1.gz
+	rm -rf $(DESTDIR)/usr/share/$(APPNAME)*
 	rm -rf $(DESTDIR)/var/lib/$(APPNAME)*
 	rm -f $(DESTDIR)/usr/bin/$(APPNAME)
