@@ -160,7 +160,7 @@ Tom Nardi \-
 .I www.digifail.com
 .\" FILES
 .SH FILES
-.I /var/lib/bluelog
+.I /usr/share/bluelog
 .br
 .I /tmp/devices.log
 .br
