@@ -1,3 +1,7 @@
+11/13/12:
+	Changed install directory to /usr/share/bluelog on x86
+	Docs updated accordingly
+
 10/23/12:
 	Restructure help output
 	Clarifications to README.LIVE
